--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,10 @@
   <groupId>org.apache.manifoldcf.elasticsearch</groupId>
 
   <name>ManifoldCF ElasticSearch Plugin</name>
-  <artifactId>elasticsearch-plugin-mcf</artifactId>
-  <version>3.0</version>
+  <artifactId>elasticsearch-1.5-plugin-mcf</artifactId>
+  <version>2.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <description>ManifoldCF Plugin for ElasticSearch</description>
+  <description>ManifoldCF Plugin for ElasticSearch 1.5</description>
   <inceptionYear>2015</inceptionYear>
 
   <organization>
