Prepare release branch
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/integration/elasticsearch-1.5/branches/release-2.0-branch@1688718 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
   <name>ManifoldCF ElasticSearch Plugin</name>
   <artifactId>elasticsearch-1.5-plugin-mcf</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.0</version>
   <packaging>jar</packaging>
   <description>ManifoldCF Plugin for ElasticSearch 1.5</description>
   <inceptionYear>2015</inceptionYear>
