Update missing ES version stuff
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/integration/elasticsearch-1.5/trunk@1807134 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.manifoldcf.elasticsearch</groupId>
 
-  <name>ManifoldCF ElasticSearch Plugin</name>
+  <name>ManifoldCF ElasticSearch 1.5 Plugin</name>
   <artifactId>elasticsearch-1.5-plugin-mcf</artifactId>
   <version>2.1-SNAPSHOT</version>
   <packaging>jar</packaging>
